--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,10 @@
-
+div{
+	color:white;
+	background:purple;
+	width:200px;
+	font-size:20px;
+	padding:10px;
+	border-left:5px solid green;
+	 text-decoration-line: underline;
+}
 /* Your CSS Code here. */
