--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,8 @@ div{
 	width:200px;
 	font-size:20px;
 	padding:10px;
-	border-left:5px solid green;
+	border-left:5px
+		solid green;
 	 text-decoration-line: underline;
 }
 /* Your CSS Code here. */
